--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <style name="Theme.JetPackComposePractice" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
@@ -11,7 +11,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/blue_700</item>
         <item name="android:navigationBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
@@ -24,4 +24,25 @@
     <style name="Theme.JetPackComposePractice.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.JetPackComposePractice.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="Theme.CustomSplashScreenTheme" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/myname</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
+        <item name="postSplashScreenTheme">@style/Theme.JetPackComposePractice</item>
+    </style>
+
+    //Sample for Splash Screen
+    <!--    <style name="Theme.OnBoardingCompose" parent="android:Theme.Material.Light.NoActionBar">-->
+    <!--        <item name="android:statusBarColor">@color/blue_700</item>-->
+    <!--    </style>-->
+
+    <!--    <style name="Theme.CustomSplashScreenTheme" parent="Theme.SplashScreen">-->
+    <!--        <item name="windowSplashScreenBackground">@color/white</item>-->
+    <!--        <item name="windowSplashScreenAnimatedIcon">@drawable/logo</item>-->
+    <!--        <item name="windowSplashScreenAnimationDuration">5000</item>-->
+    <!--        <item name="postSplashScreenTheme">@style/Theme.OnBoardingCompose</item>-->
+    <!--    </style>-->
+
+
 </resources>
